# Bambo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Bambo/: CMakeLists.txt
Bambo/include/: Engine.h
Bambo/resources/: config.json
Bambo/src/: Engine.cpp  Main.cpp
Editor/: CMakeLists.txt
Editor/Core/: CMakeLists.txt
Editor/Core/include/: Editor.h  EditorCore.h
Editor/Core/src/: Editor.cpp  Main.cpp
Editor/Runtime/: EditorPaths.h.in
Editor/Runtime/Core/: CMakeLists.txt
Editor/Runtime/EditorStates/: CMakeLists.txt
Editor/Runtime/EditorWidgets/: CMakeLists.txt
Editor/Runtime/EditorWindows/: CMakeLists.txt
Editor/Runtime/InspectorDrawers/: CMakeLists.txt
Editor/include/: EditorConfig.json.in  EditorContext.h  EditorModule.h  EditorPaths.h.in  Engine.h  GUIWorld.h  Project.h
Editor/include/Drawers/: DefaultDrawers.h  InspectorDrawer.h  InspectorDrawersRegistry.h  PrimitiveDrawers.h
Editor/include/EditorStates/: IEditorState.h  MainEditorState.h  OpenProjectEditorState.h
Editor/include/Widget/: FileBrowserWidget.h
Editor/include/Windows/: ContentBrowser.h  GUIWindow.h  GameViewport.h  Inspector.h  ProjectBrowser.h  SceneHierarchy.h
Editor/src/: EditorModule.cpp  Engine.cpp  Main.cpp  Project.cpp
Editor/src/Drawers/: DefaultDrawers.cpp  InspectorDrawersRegistry.cpp  PrimitiveDrawers.cpp
Editor/src/EditorStates/: MainEditorState.cpp  OpenProjectEditorState.cpp
Editor/src/Widget/: FileBrowserWidget.cpp
Editor/src/Windows/: ContentBrowser.cpp  GameViewport.cpp  Inspector.cpp  ProjectBrowser.cpp  SceneHierarchy.cpp
Engine/: CMakeLists.txt
Engine/Audio/: CMakeLists.txt
Engine/Audio/include/: ALCheck.h  Audio.h  AudioDevice.h  AudioFile.h  AudioFormatLoader.h  AudioListener.h  AudioProvider.h  AudioSource.h  AudioUtils.h  AudioWavLoader.h  Music.h  Sound.h  StreamingAudio.h  StreamingAudioProvider.h
Engine/Audio/src/: ALCheck.cpp  Audio.cpp  AudioDevice.cpp  AudioFile.cpp  AudioListener.cpp  AudioSource.cpp  AudioUtils.cpp  AudioWavLoader.cpp  Music.cpp  Sound.cpp  StreamingAudio.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/include/: Core.h  EnginePaths.h.in  Log.h  Paths.h.in  Utils.h  WindowSettings.h  pch.h
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/include/: Camera.h  Input.h  Rect.h  RenderConfig.h  RenderTarget.h  Shader.h  ShaderProvider.h  Sprite.h  Texture2D.h  TextureProvider.h  Transform.h  Vertex.h  Window.h  WindowSettings.h
Engine/Graphics/src/: Camera.cpp  RenderTarget.cpp  Shader.cpp  Sprite.cpp  Transform.cpp
Engine/Resources/Shaders/: ColorDefault.shader  VColorDefault.txt  VSpriteDefault.txt
Engine/Runtime/: BamboPaths.h.in
Engine/Runtime/Audio/: CMakeLists.txt
Engine/Runtime/Core/: CMakeLists.txt
Engine/Runtime/GUI/: CMakeLists.txt
Engine/Runtime/Graphics/: CMakeLists.txt
Engine/Runtime/Serialization/: CMakeLists.txt
Engine/Runtime/Window/: CMakeLists.txt
Engine/Runtime/World/: CMakeLists.txt
Engine/Window/: CMakeLists.txt
Engine/Window/include/: Window.h
Engine/Window/src/: Window.cpp
Engine/include/: Bambo.h  BamboPaths.h.in  Core.h  Engine.h  Game.h  Paths.h  Utils.h  engpch.h  pch.h
Engine/include/Audio/: ALCheck.h  Audio.h  AudioDevice.h  AudioManager.h  AudioSource.h  Music.h
Engine/include/Common/: Transform.h
Engine/include/Core/: BMath.h  Core.h  Engine.h  Essentials.h  GameInstance.h  IID.h  Module.h  SingletonManager.h  Utils.h
Engine/include/Graphics/: BufferLayout.h  Camera.h  Color.h  CommonMath.h  Framebuffer.h  GraphicsContext.h  GraphicsPaths.h.in  Rect.h  RenderAPI.h  RenderConfig.h  RenderManager.h  RenderTarget.h  Renderer.h  RendererImplementation.h  Shader.h  ShaderImplementation.h  ShaderProvider.h  Sprite.h  SpriteRenderer.h  Texture2D.h  TextureProvider.h  Transform.h  Vertex.h
Engine/include/Input/: Input.h
Engine/include/Main/: Engine.h  Game.h  Module.h  TimeManager.h  World.h
Engine/include/Managers/: AudioManager.h  RenderManager.h  Singleton.h  WindowManager.h
Engine/include/Math/: CommonMath.h
Engine/include/Serialization/: JsonSerializer.h  MathSerialization.h  WorldSerialization.h
Engine/include/Window/: Window.h  WindowManager.h  WindowsWindow.h
Engine/include/World/: Entity.h  GameObject.h  World.h  WorldSerializer.h
Engine/resources/: config.json
Engine/resources/Shader/: SpriteDefault.fstxt  SpriteDefault.vstxt
Engine/resources/Shaders/: FSpriteDefault.txt  SpriteDefault.shader  VSpriteDefault.txt
Engine/src/: Bambo.cpp  Engine.cpp  Game.cpp
Engine/src/Audio/: ALCheck.cpp  Audio.cpp  AudioDevice.cpp  AudioListener.cpp  AudioManager.cpp  AudioSource.cpp  AudioUtils.cpp  AudioWavLoader.cpp  Music.cpp  Sound.cpp  StreamingAudio.cpp
Engine/src/Common/: Transform.cpp
Engine/src/Core/: Engine.cpp  GameInstance.cpp  IID.cpp  Log.cpp  SingletonManager.cpp  TimeManager.cpp  Utils.cpp
Engine/src/GUI/: GUIWorld.cpp
Engine/src/Graphics/: BufferLayout.cpp  Camera.cpp  Framebuffer.cpp  GraphicsContext.cpp  RenderManager.cpp  RenderTarget.cpp  Renderer.cpp  RendererImplementation.cpp  Shader.cpp  ShaderImplementation.cpp  Sprite.cpp  SpriteRenderer.cpp  Texture2D.cpp  TextureImplementation.cpp  Transform.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
Engine/src/Input/: Input.cpp
Engine/src/Main/: Engine.cpp  Game.cpp  Main.cpp  TimeManager.cpp  World.cpp
Engine/src/Managers/: AudioManager.cpp  RenderManager.cpp  WindowManager.cpp
Engine/src/Serialization/: JsonDeserializer.cpp  JsonSerializer.cpp  MathSerialization.cpp  WorldSerialization.cpp
Engine/src/Window/: Input.cpp  Window.cpp  WindowManager.cpp  WindowsWindow.cpp
Engine/src/World/: Entity.cpp  GameObject.cpp  World.cpp
Modules/Audio/: CMakeLists.txt
Modules/Audio/include/: ALCheck.h  Audio.h  AudioDevice.h  AudioManager.h  AudioProvider.h  Music.h  StreamingAudioProvider.h
Modules/Audio/src/: ALCheck.cpp  Audio.cpp  AudioDevice.cpp  AudioListener.cpp  AudioWavLoader.cpp  Music.cpp  Sound.cpp  StreamingAudio.cpp
Modules/Graphics/: CMakeLists.txt
Modules/Window/: CMakeLists.txt
Polygon/: CMakeLists.txt
Polygon/src/: Main.cpp
(+350 files in other folders)
