cmake_minimum_required(VERSION 3.16)

set(BAMBO_ENGINE_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR})
set(BAMBO_ENGINE_BINARY_DIR ${Bambo_BINARY_DIR}/Engine)

set(BAMBO_ENGINE_SOURCES)

set(BAMBO_ENGINE_PUBLIC_LIBS)
set(BAMBO_ENGINE_PRIVATE_LIBS)

set(BAMBO_ENGINE_PUBLIC_PATHS)
set(BAMBO_ENGINE_PRIVATE_PATHS)

set(MODULE_SOURCES)
set(MODULE_PUBLIC_LIBS)
set(MODULE_PRIVATE_LIBS)
set(MODULE_PUBLIC_PATHS)
set(MODULE_PRIVATE_PATHS)

set(BAMBO_ENGINE_THIRDPARTY_PUBLIC_PATHS)
set(BAMBO_ENGINE_THIRDPARTY_PRIVATE_PATHS)

add_subdirectory(Thirdparty/)

set(BAMBO_ENGINE_MODULES 
Runtime/Graphics
Runtime/World
Runtime/Window
Runtime/Core
Runtime/Serialization
Runtime/GUI
Runtime/Audio)

foreach(MODULE ${BAMBO_ENGINE_MODULES})

	add_subdirectory(${MODULE})

	list(APPEND BAMBO_ENGINE_SOURCES ${MODULE_SOURCES})

	list(APPEND BAMBO_ENGINE_PUBLIC_LIBS ${MODULE_PUBLIC_LIBS})
	list(APPEND BAMBO_ENGINE_PRIVATE_LIBS ${MODULE_PRIVATE_LIBS})

	list(APPEND BAMBO_ENGINE_PUBLIC_PATHS ${MODULE_PUBLIC_PATHS})
	list(APPEND BAMBO_ENGINE_PRIVATE_PATHS ${MODULE_PRIVATE_PATHS})

endforeach()

add_library(BamboEngine STATIC ${BAMBO_ENGINE_SOURCES})

list(REMOVE_DUPLICATES BAMBO_ENGINE_PUBLIC_PATHS)
list(REMOVE_DUPLICATES BAMBO_ENGINE_PRIVATE_PATHS)

list(APPEND BAMBO_ENGINE_PUBLIC_PATHS ${BAMBO_ENGINE_BINARY_DIR}/Runtime/generated/)

set(ROOT_BAMBO_ENGINE_PUBLIC_PATHS ${BAMBO_ENGINE_PUBLIC_PATHS} PARENT_SCOPE)
set(ROOT_BAMBO_ENGINE_THIRDPARTY_PUBLIC_PATHS ${BAMBO_ENGINE_THIRDPARTY_PUBLIC_PATHS} PARENT_SCOPE)

target_include_directories(BamboEngine
PUBLIC ${BAMBO_ENGINE_PUBLIC_PATHS}
PRIVATE ${BAMBO_ENGINE_PRIVATE_PATHS}

PUBLIC ${BAMBO_ENGINE_THIRDPARTY_PUBLIC_PATHS}
PRIVATE ${BAMBO_ENGINE_THIRDPARTY_PRIVATE_PATHS})

list(REMOVE_DUPLICATES BAMBO_ENGINE_PUBLIC_LIBS)
list(REMOVE_DUPLICATES BAMBO_ENGINE_PRIVATE_LIBS)

find_library(THIRDPARTY_LIBS NAMES ${BAMBO_ENGINE_PUBLIC_LIBS} ${BAMBO_ENGINE_PRIVATE_LIBS} HINTS ${Bambo_BINARY_DIR}/Engine/Thirdparty/)

target_link_libraries(BamboEngine
PUBLIC ${BAMBO_ENGINE_PUBLIC_LIBS}
PRIVATE ${BAMBO_ENGINE_PRIVATE_LIBS})

target_compile_features(BamboEngine PUBLIC cxx_std_17)
target_compile_definitions(BamboEngine PUBLIC BAMBO_DEBUG_ON)

target_precompile_headers(BamboEngine PUBLIC "${CMAKE_CURRENT_LIST_DIR}/Runtime/Core/include/pch.h")

set(BAMBO_ENGINE_RESOURCE_DIR "${Bambo_SOURCE_DIR}/Engine/Resources")
set(BAMBO_ENGINE_CONFIG_FILE_PATH "${Bambo_SOURCE_DIR}/Engine/Resources/config.json")
set(BAMBO_ENGINE_DEFAULT_SPRITE_PATH_A "Textures/Square.png")
set(BAMBO_ENGINE_DEFAULT_SHADER_PATH_A "Shaders/ColorDefault/ColorDefault.shader")
set(BAMBO_ENGINE_DEFAULT_FONT_SHADER_PATH_A "Shaders/FontDefault/FontDefault.shader")
set(BAMBO_ENGINE_DEFAULT_UI_SHADER_PATH_A "Shaders/UIDefault/UIDefault.shader")
set(BAMBO_ENGINE_DEFAULT_FONT_PATH_A "Fonts/arial.ttf")

add_definitions(-DBAMBO_ENGINE_RESOURCE_DIR=${BAMBO_ENGINE_RESOURCE_DIR})
add_definitions(-DBAMBO_ENGINE_CONFIG_FILE_PATH_A=${BAMBO_ENGINE_CONFIG_FILE_PATH_A})
add_definitions(-DBAMBO_ENGINE_DEFAULT_SPRITE_PATH_A=${BAMBO_ENGINE_DEFAULT_SPRITE_PATH_A})
add_definitions(-DBAMBO_ENGINE_DEFAULT_SHADER_PATH_A=${BAMBO_ENGINE_DEFAULT_SHADER_PATH_A})
add_definitions(-DBAMBO_ENGINE_DEFAULT_FONT_SHADER_PATH_A=${BAMBO_ENGINE_DEFAULT_FONT_SHADER_PATH_A})
add_definitions(-DBAMBO_ENGINE_DEFAULT_UI_SHADER_PATH_A=${BAMBO_ENGINE_DEFAULT_UI_SHADER_PATH_A})
add_definitions(-DBAMBO_ENGINE_DEFAULT_FONT_PATH_A=${BAMBO_ENGINE_DEFAULT_FONT_PATH_A})
add_definitions(-DUNICODE)
add_definitions(-D_UNICODE)

configure_file(${BAMBO_ENGINE_SOURCE_DIR}/Runtime/BamboPaths.h.in "${BAMBO_ENGINE_BINARY_DIR}/Runtime/generated/BamboPaths.h")

